Building Fixed Menu on Small Devices

--- a/wp-content/themes/understrap/sass/template/_footer.scss
+++ b/wp-content/themes/understrap/sass/template/_footer.scss
@@ -8,15 +8,6 @@
             font-weight: 500;
         }
 
-        .slick-slider {
-            .slick-item {
-                p{
-                    font-family: $mont-light;
-                    font-size: 14px;
-                }
-            }
-        }
-
         .footer-menu {
             margin-top: .5em;
 
@@ -43,12 +34,12 @@
             justify-content: left;
             align-items: center;
 
-            img{
-                @include media-breakpoint-down(sm){
+            img {
+                @include media-breakpoint-down(sm) {
                     width: 50px;
                 }
             }
-            
+
         }
 
 
@@ -72,9 +63,10 @@
         justify-content: center;
         align-items: center;
         min-height: 20vh;
+        margin-bottom: 3em;
 
-        .main-footer-logo {
-            @include media-breakpoint-down(sm){
+        .footer-main-logo {
+            @include media-breakpoint-down(sm) {
                 width: 150px;
             }
         }
@@ -88,6 +80,7 @@
 
         .footer-second-logo {
             width: 150px;
+
             @include media-breakpoint-up(sm) {
                 width: 200px;
                 position: absolute;
@@ -95,6 +88,45 @@
 
             }
         }
+    }
+
+    .fixed-mobile-menu {
+        position: relative;
+
+        .mobile-menu {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: $white-smoke;
+            width: 100%;
+            height: 80px;
+            position: fixed;
+            bottom: -1px;
+
+            .item {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                text-align: center;
+
+                img {
+                    width: 25px;
+                }
+
+                span {
+
+                    color: $boulder;
+                    font-family: $mont-bold;
+                    font-size: 10px;
+
+                    a {
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+
     }
 
 }
