--- a/wp-content/themes/understrap/sass/template/_slick_editor.scss
+++ b/wp-content/themes/understrap/sass/template/_slick_editor.scss
@@ -1,3 +1,11 @@
+.slick-slider {
+    .slick-item {
+        p {
+            font-family: $mont-light;
+            font-size: 14px;
+        }
+    }
+}
 .slick-prev {
     position: absolute;
     top: -23px;
@@ -8,7 +16,7 @@
     position: absolute;
     top: -23px;
 
-    @include media-breakpoint-down(sm){
+    @include media-breakpoint-down(sm) {
         right: 50px;
     }
 }
